# email_project

./: .env  Cargo.toml  docker-compose.yaml
.cargo/: config.toml
migrations/: 20250610154234_create_subscriptions_table.sql  20250621064102_create_sample_json.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/handler/: health_check.rs  mod.rs  sample_json.rs  subscribe.rs
src/models/: form_data.rs  mod.rs  sample_json.rs
tests/: health_check_test.rs  subscribe_test.rs
tests/common/: app.rs  mod.rs
