[package]
name = "email_project"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1.0"
config = "0.13"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
env_logger = "0.11"
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
reqwest = "0.12.19"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate"
]

